@@ -5,7 +5,6 @@ import org.apereo.cas.util.CollectionUtils;
 import org.apereo.cas.util.LoggingUtils;
 import org.apereo.cas.util.function.FunctionUtils;
 import org.apereo.cas.web.flow.CasWebflowConfigurer;
-
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -21,8 +20,10 @@ import org.springframework.binding.expression.spel.SpringELExpressionParser;
 import org.springframework.binding.expression.support.FluentParserContext;
 import org.springframework.binding.expression.support.LiteralExpression;
 import org.springframework.binding.mapping.Mapper;
+import org.springframework.binding.mapping.Mapping;
 import org.springframework.binding.mapping.impl.DefaultMapper;
 import org.springframework.binding.mapping.impl.DefaultMapping;
+import org.springframework.binding.mapping.impl.DefaultMappingContext;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.expression.BeanExpressionContextAccessor;
 import org.springframework.context.expression.EnvironmentAccessor;
@@ -40,6 +41,7 @@ import org.springframework.webflow.action.ViewFactoryActionAdapter;
 import org.springframework.webflow.config.FlowDefinitionRegistryBuilder;
 import org.springframework.webflow.definition.StateDefinition;
 import org.springframework.webflow.definition.registry.FlowDefinitionRegistry;
+import org.springframework.webflow.engine.ActionList;
 import org.springframework.webflow.engine.ActionState;
 import org.springframework.webflow.engine.DecisionState;
 import org.springframework.webflow.engine.EndState;
@@ -48,6 +50,7 @@ import org.springframework.webflow.engine.FlowExecutionExceptionHandler;
 import org.springframework.webflow.engine.FlowVariable;
 import org.springframework.webflow.engine.SubflowAttributeMapper;
 import org.springframework.webflow.engine.SubflowState;
+import org.springframework.webflow.engine.TargetStateResolver;
 import org.springframework.webflow.engine.Transition;
 import org.springframework.webflow.engine.TransitionCriteria;
 import org.springframework.webflow.engine.TransitionableState;
@@ -72,7 +75,6 @@ import org.springframework.webflow.expression.spel.FlowVariablePropertyAccessor;
 import org.springframework.webflow.expression.spel.MapAdaptablePropertyAccessor;
 import org.springframework.webflow.expression.spel.MessageSourcePropertyAccessor;
 import org.springframework.webflow.expression.spel.ScopeSearchingPropertyAccessor;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -179,10 +181,30 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
 
     @Override
     public Transition createTransition(final Expression criteriaOutcomeExpression,
-                                       final String targetState,
+                                       final String targetState, final Action... actions) {
+        return createTransition(criteriaOutcomeExpression,
+            StringUtils.isNotBlank(targetState) ? new DefaultTargetStateResolver(targetState) : null,
+            actions);
+    }
+
+    @Override
+    public Transition createTransition(final String criteriaOutcomeExpression,
+                                       final TargetStateResolver targetStateResolver) {
+        return createTransition(new LiteralExpression(criteriaOutcomeExpression), targetStateResolver, EMPTY_ACTIONS_ARRAY);
+    }
+
+    @Override
+    public Transition createTransition(final Expression criteriaOutcomeExpression,
+                                       final TargetStateResolver targetStateResolver) {
+        return createTransition(criteriaOutcomeExpression, targetStateResolver, EMPTY_ACTIONS_ARRAY);
+    }
+
+    @Override
+    public Transition createTransition(final Expression criteriaOutcomeExpression,
+                                       final TargetStateResolver targetStateResolver,
                                        final Action... actions) {
         val criteria = getTransitionCriteriaForExpression(criteriaOutcomeExpression);
-        val transition = new Transition(criteria, StringUtils.isNotBlank(targetState) ? new DefaultTargetStateResolver(targetState) : null);
+        val transition = new Transition(criteria, targetStateResolver);
         if (actions != null && actions.length > 0) {
             val transitionActionCriteria = Arrays.stream(actions)
                 .map(ActionTransitionCriteria::new)
@@ -223,7 +245,7 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
             return null;
         }
         val ctx = new FluentParserContext();
-        val action = this.flowBuilderServices.getExpressionParser().parseExpression(expression, ctx);
+        val action = flowBuilderServices.getExpressionParser().parseExpression(expression, ctx);
         val newAction = new EvaluateAction(action, null);
         LOGGER.trace("Created evaluate action for expression [{}]", action.getExpressionString());
         return newAction;
@@ -237,7 +259,7 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
     @Override
     public ActionState createActionState(final Flow flow, final String name, final String... action) {
         val actionList = Arrays.stream(action).map(this::createEvaluateAction).toList();
-        return createActionState(flow, name, actionList.toArray(EMPTY_ACTIONS_ARRAY));
+        return createActionState(flow, name, actionList.toArray(Action[]::new));
     }
 
     @Override
@@ -338,10 +360,10 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
             LOGGER.trace("Flow [{}] already contains a definition for state id [{}]", flow.getId(), id);
             return getTransitionableState(flow, id, ViewState.class);
         }
-        val viewFactory = this.flowBuilderServices.getViewFactoryCreator()
-            .createViewFactory(expression, this.flowBuilderServices.getExpressionParser(),
-                this.flowBuilderServices.getConversionService(), binder, this.flowBuilderServices.getValidator(),
-                this.flowBuilderServices.getValidationHintResolver());
+        val viewFactory = flowBuilderServices.getViewFactoryCreator()
+            .createViewFactory(expression, flowBuilderServices.getExpressionParser(),
+                flowBuilderServices.getConversionService(), binder, this.flowBuilderServices.getValidator(),
+                flowBuilderServices.getValidationHintResolver());
         return createViewState(flow, id, viewFactory);
     }
 
@@ -373,21 +395,22 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
 
     @Override
     public SubflowState createSubflowState(final Flow flow, final String stateId, final String subflow, final Action entryAction) {
+        return createSubflowState(flow, stateId, subflow, this.mainFlowDefinitionRegistry, entryAction);
+    }
+
+    @Override
+    public SubflowState createSubflowState(final Flow flow, final String stateId,
+                                           final String subflow, final FlowDefinitionRegistry registry,
+                                           final Action entryAction) {
         if (containsFlowState(flow, stateId)) {
             LOGGER.trace("Flow [{}] already contains a definition for state id [{}]", flow.getId(), stateId);
             return getTransitionableState(flow, stateId, SubflowState.class);
         }
-
-        val state = new SubflowState(flow, stateId, new BasicSubflowExpression(subflow, this.mainFlowDefinitionRegistry));
+        val state = new SubflowState(flow, stateId, new BasicSubflowExpression(subflow, registry));
         if (entryAction != null) {
             state.getEntryActionList().add(entryAction);
         }
         return state;
-    }
-
-    @Override
-    public SubflowState createSubflowState(final Flow flow, final String stateId, final String subflow) {
-        return createSubflowState(flow, stateId, subflow, null);
     }
 
     @Override
@@ -403,10 +426,10 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
     public void createStateDefaultTransition(final TransitionableState state, final String targetState) {
         if (state == null) {
             LOGGER.trace("Cannot add default transition of [{}] to the given state is null and cannot be found in the flow.", targetState);
-            return;
+        } else {
+            val transition = createTransition(targetState);
+            state.getTransitionSet().add(transition);
         }
-        val transition = createTransition(targetState);
-        state.getTransitionSet().add(transition);
     }
 
     @Override
@@ -465,25 +488,27 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
     public Transition createTransitionForState(final TransitionableState state, final String criteriaOutcome,
                                                final String targetState, final boolean removeExisting,
                                                final Map<String, Object> attributes, final Action... actions) {
-        try {
-            if (removeExisting) {
-                var transition = (Transition) null;
-                do {
-                    transition = (Transition) state.getTransition(criteriaOutcome);
-                    if (transition != null) {
-                        state.getTransitionSet().remove(transition);
-                    }
-                } while (transition != null);
+        return FunctionUtils.doIfNotNull(state, () -> {
+            try {
+                if (removeExisting) {
+                    var transition = (Transition) null;
+                    do {
+                        transition = (Transition) state.getTransition(criteriaOutcome);
+                        if (transition != null) {
+                            state.getTransitionSet().remove(transition);
+                        }
+                    } while (transition != null);
+                }
+                val transition = createTransition(criteriaOutcome, targetState, actions);
+                attributes.forEach((key, value) -> transition.getAttributes().put(key, value));
+                state.getTransitionSet().add(transition);
+                LOGGER.trace("Added transition [{}] to the state [{}]", transition.getId(), state.getId());
+                return transition;
+            } catch (final Exception e) {
+                LoggingUtils.error(LOGGER, e);
             }
-            val transition = createTransition(criteriaOutcome, targetState, actions);
-            attributes.forEach((key, value) -> transition.getAttributes().put(key, value));
-            state.getTransitionSet().add(transition);
-            LOGGER.trace("Added transition [{}] to the state [{}]", transition.getId(), state.getId());
-            return transition;
-        } catch (final Exception e) {
-            LoggingUtils.error(LOGGER, e);
-        }
-        return null;
+            return null;
+        });
     }
 
     @Override
@@ -491,24 +516,33 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
                                                final String targetState, final boolean removeExisting,
                                                final Map<String, Object> attributes) {
         return createTransitionForState(state, criteriaOutcome, targetState,
-            removeExisting, attributes, new Action[0]);
+            removeExisting, attributes, EMPTY_ACTIONS_ARRAY);
     }
 
     @Override
     public Transition createTransitionForState(final TransitionableState state, final String criteriaOutcome,
                                                final String targetState, final boolean removeExisting) {
         return createTransitionForState(state, criteriaOutcome, targetState,
-            removeExisting, Map.of(), new Action[0]);
+            removeExisting, Map.of(), EMPTY_ACTIONS_ARRAY);
+    }
+
+    @Override
+    public Transition createTransitionForState(final TransitionableState state,
+                                               final String criteriaOutcome,
+                                               final TargetStateResolver targetStateResolver) {
+        val transition = createTransition(criteriaOutcome, targetStateResolver);
+        state.getTransitionSet().add(transition);
+        return transition;
     }
 
     @Override
     public Transition insertTransitionForState(final TransitionableState state, final String criteriaOutcome,
                                                final String targetState) {
-        val transition = createTransition(criteriaOutcome, targetState, new Action[0]);
+        val transition = createTransition(criteriaOutcome, targetState, EMPTY_ACTIONS_ARRAY);
         val field = ReflectionUtils.findField(state.getTransitionSet().getClass(), "transitions");
         ReflectionUtils.makeAccessible(field);
         val transitions = (List<Transition>) ReflectionUtils.getField(field, state.getTransitionSet());
-        Objects.requireNonNull(transitions).add(0, transition);
+        Objects.requireNonNull(transitions).addFirst(transition);
         LOGGER.trace("Added transition [{}] to the state [{}]", transition.getId(), state.getId());
         return transition;
     }
@@ -629,12 +663,12 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
             LOGGER.warn("Flow registry is not configured and/or initialized correctly.");
             return null;
         }
-        val found = Arrays.asList(registry.getFlowDefinitionIds()).contains(id);
+        val found = List.of(registry.getFlowDefinitionIds()).contains(id);
         if (found) {
             return (Flow) registry.getFlowDefinition(id);
         }
-        LOGGER.warn("Could not find flow definition [{}]. Available flow definition ids are [{}]",
-            id, registry.getFlowDefinitionIds());
+        LOGGER.debug("[{}] could not find flow definition [{}]. Available flow definition ids are [{}]",
+            getName(), id, registry.getFlowDefinitionIds());
         return null;
     }
 
@@ -648,12 +682,12 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
         val spelExpressionParser = new SpelExpressionParser(configuration);
         val parser = new SpringELExpressionParser(spelExpressionParser, this.flowBuilderServices.getConversionService());
         parser.addPropertyAccessor(new ActionPropertyAccessor());
+        parser.addPropertyAccessor(new BeanExpressionContextAccessor());
         parser.addPropertyAccessor(new BeanFactoryPropertyAccessor());
         parser.addPropertyAccessor(new FlowVariablePropertyAccessor());
         parser.addPropertyAccessor(new MapAdaptablePropertyAccessor());
         parser.addPropertyAccessor(new MessageSourcePropertyAccessor());
         parser.addPropertyAccessor(new ScopeSearchingPropertyAccessor());
-        parser.addPropertyAccessor(new BeanExpressionContextAccessor());
         parser.addPropertyAccessor(new MapAccessor());
         parser.addPropertyAccessor(new MapAdaptablePropertyAccessor());
         parser.addPropertyAccessor(new EnvironmentAccessor());
@@ -668,12 +702,13 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
      * @param flow     the flow
      * @return the mapper
      */
-    public Mapper createFlowInputMapper(final List<DefaultMapping> mappings,
-                                        final Flow flow) {
-        val flowInputMapper = flow.getInputMapper() == null
-            ? new DefaultMapper()
-            : (DefaultMapper) flow.getInputMapper();
-        mappings.forEach(flowInputMapper::addMapping);
+    public Mapper createFlowInputMapper(final List<? extends Mapping> mappings, final Flow flow) {
+        val flowInputMapper = flow.getInputMapper() == null ? new DefaultMapper() : (DefaultMapper) flow.getInputMapper();
+        mappings
+            .stream()
+            .map(DefaultMapping.class::cast)
+            .map(CasDefaultMapping::new)
+            .forEach(flowInputMapper::addMapping);
         flow.setInputMapper(flowInputMapper);
         return flowInputMapper;
     }
@@ -684,31 +719,39 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
      * @param mappings the mappings
      * @return the mapper
      */
-    public Mapper createFlowInputMapper(final List<DefaultMapping> mappings) {
+    public Mapper createFlowInputMapper(final List<? extends Mapping> mappings) {
         val flowInputMapper = new DefaultMapper();
-        mappings.forEach(flowInputMapper::addMapping);
+        mappings
+            .stream()
+            .map(DefaultMapping.class::cast)
+            .map(CasDefaultMapping::new)
+            .forEach(flowInputMapper::addMapping);
         return flowInputMapper;
     }
 
-    /**
-     * Create mapping to subflow state.
-     *
-     * @param name     the name
-     * @param value    the value
-     * @param required the required
-     * @param type     the type
-     * @return the default mapping
-     */
-    public DefaultMapping createMappingToSubflowState(final String name, final String value,
-                                                      final boolean required, final Class type) {
-        val parser = this.flowBuilderServices.getExpressionParser();
-        val source = parser.parseExpression(value, new FluentParserContext());
-        val target = parser.parseExpression(name, new FluentParserContext());
-        val mapping = new DefaultMapping(source, target);
+    @Override
+    public Mapping createFlowMapping(final String sourceExpression, final String targetExpression,
+                                     final boolean required, final Class type) {
+        val source = createExpression(sourceExpression);
+        val target = createExpression(targetExpression);
+        val mapping = new CasDefaultMapping(new DefaultMapping(source, target));
         mapping.setRequired(required);
-        val typeConverter = new RuntimeBindingConversionExecutor(type, this.flowBuilderServices.getConversionService());
-        mapping.setTypeConverter(typeConverter);
+        if (type != null) {
+            val typeConverter = new RuntimeBindingConversionExecutor(type, flowBuilderServices.getConversionService());
+            mapping.setTypeConverter(typeConverter);
+        }
         return mapping;
+    }
+
+    /**
+     * Create flow mapping.
+     *
+     * @param sourceExpression the source expression
+     * @param targetExpression the target expression
+     * @return the mapping
+     */
+    public Mapping createFlowMapping(final String sourceExpression, final String targetExpression) {
+        return createFlowMapping(sourceExpression, targetExpression, false, null);
     }
 
     /**
@@ -786,15 +829,8 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
         cloneActionState(generateServiceTicket, consentTicketAction);
     }
 
-    /**
-     * Gets transitionable state.
-     *
-     * @param <T>     the type parameter
-     * @param flow    the flow
-     * @param stateId the state id
-     * @param clazz   the clazz
-     * @return the transitionable state
-     */
+
+    @Override
     public <T extends TransitionableState> T getTransitionableState(final Flow flow, final String stateId, final Class<T> clazz) {
         if (containsFlowState(flow, stateId)) {
             val state = flow.getTransitionableState(stateId);
@@ -834,15 +870,20 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
     /**
      * Prepend actions to action state execution list.
      *
-     * @param flow          the flow
-     * @param actionStateId the action state id
-     * @param actions       the actions
+     * @param flow    the flow
+     * @param stateId the action state id
+     * @param actions the actions
      */
-    public void prependActionsToActionStateExecutionList(final Flow flow, final String actionStateId, final String... actions) {
+    public void prependActionsToActionStateExecutionList(final Flow flow, final String stateId, final Object... actions) {
         val evalActions = Arrays.stream(actions)
-            .map(this::createEvaluateAction)
-            .toArray(EvaluateAction[]::new);
-        addActionsToActionStateExecutionListAt(flow, actionStateId, 0, evalActions);
+            .map(givenAction -> {
+                if (givenAction instanceof final Action action) {
+                    return action;
+                }
+                return createEvaluateAction(givenAction.toString());
+            })
+            .toArray(Action[]::new);
+        addActionsToActionStateExecutionListAt(flow, stateId, 0, evalActions);
     }
 
     /**
@@ -852,44 +893,61 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
      * @param actionStateId the action state id
      * @param actions       the actions
      */
-    public void prependActionsToActionStateExecutionList(final Flow flow, final ActionState actionStateId, final EvaluateAction... actions) {
+    public void prependActionsToActionStateExecutionList(final Flow flow, final TransitionableState actionStateId, final Action... actions) {
         addActionsToActionStateExecutionListAt(flow, actionStateId.getId(), 0, actions);
     }
 
     /**
      * Add actions to action state execution list at.
      *
-     * @param flow          the flow
-     * @param actionStateId the action state id
-     * @param position      the position
-     * @param actions       the actions
+     * @param flow     the flow
+     * @param stateId  the action state id
+     * @param position the position
+     * @param actions  the actions
      */
-    public void addActionsToActionStateExecutionListAt(final Flow flow, final String actionStateId, final int position,
-                                                       final EvaluateAction... actions) {
-        val actionState = getState(flow, actionStateId, ActionState.class);
-        val actionList = actionState.getActionList();
-        val currentActions = new ArrayList<Action>(actionList.size() + actions.length);
-        actionList.forEach(currentActions::add);
-        val index = position < 0 || position == Integer.MAX_VALUE ? currentActions.size() : position;
-        currentActions.forEach(actionList::remove);
-        Arrays.stream(actions).forEach(a -> currentActions.add(index, a));
-        actionList.addAll(currentActions.toArray(Action[]::new));
+    public void addActionsToActionStateExecutionListAt(final Flow flow, final String stateId, final int position,
+                                                       final Action... actions) {
+        if (flow != null) {
+            val givenState = getState(flow, stateId, TransitionableState.class);
+            var actionList = new ActionList();
+            if (givenState instanceof final ActionState as) {
+                actionList = as.getActionList();
+            }
+            if (givenState instanceof final ViewState vs) {
+                actionList = vs.getEntryActionList();
+            }
+            val currentActions = new ArrayList<Action>(actionList.size() + actions.length);
+            actionList.forEach(currentActions::add);
+            val index = position < 0 || position == Integer.MAX_VALUE ? currentActions.size() : position;
+            currentActions.forEach(actionList::remove);
+            currentActions.addAll(index, Arrays.stream(actions).toList());
+            actionList.addAll(currentActions.toArray(Action[]::new));
+            LOGGER.trace("Final (entry) action list for state [{}] is [{}]", stateId, actionList);
+        }
     }
 
-    /**
-     * Create external redirect view factory.
-     *
-     * @param expressionId the expression id
-     * @return the view factory
-     */
+
+    @Override
     public ViewFactory createExternalRedirectViewFactory(final String expressionId) {
         val expression = createExpression(expressionId, String.class);
         return new ActionExecutingViewFactory(new ExternalRedirectAction(expression));
     }
 
-    /**
-     * Handle the initialization of the webflow.
-     */
     protected void doInitialize() {
+    }
+
+    private static class CasDefaultMapping extends DefaultMapping {
+        CasDefaultMapping(final DefaultMapping mapping) {
+            super(mapping.getSourceExpression(), mapping.getTargetExpression());
+            setRequired(mapping.isRequired());
+            setTypeConverter(mapping.getTypeConverter());
+        }
+
+        @Override
+        public void map(final DefaultMappingContext context) {
+            if (getSourceExpression().getValue(context.getSource()) != null) {
+                super.map(context);
+            }
+        }
     }
 }
