@@ -8,32 +8,30 @@ import lombok.RequiredArgsConstructor;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
-import org.springframework.beans.factory.DisposableBean;
-import org.springframework.jdbc.core.namedparam.NamedParameterJdbcDaoSupport;
+import org.apache.commons.lang3.StringUtils;
+import org.apereo.cas.audit.spi.AbstractAuditTrailManager;
+import org.apereo.cas.audit.spi.entity.AuditTrailEntity;
+import org.apereo.cas.jpa.JpaEntityFactory;
+import org.apereo.cas.util.jpa.MapToJsonAttributeConverter;
+import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.transaction.TransactionStatus;
 import org.springframework.transaction.support.TransactionCallback;
 import org.springframework.transaction.support.TransactionCallbackWithoutResult;
 import org.springframework.transaction.support.TransactionOperations;
-import org.springframework.util.StringUtils;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.time.Instant;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
+import java.time.temporal.TemporalAccessor;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 /**
@@ -50,8 +48,11 @@ import java.util.stream.Collectors;
  *  AUD_ACTION    VARCHAR2(100)  NOT NULL,
  *  APPLIC_CD     VARCHAR2(5)    NOT NULL,
  *  AUD_DATE      TIMESTAMP      NOT NULL,
- *  AUD_GEOLOCATION   VARCHAR2(100)   NOT NULL,
- *  AUD_USERAGENT     VARCHAR2(100)   NOT NULL
+ *  AUD_GEOLOCATION   VARCHAR2(100)  NOT NULL,
+ *  AUD_USERAGENT     VARCHAR2(100)  NOT NULL,
+ *  AUD_LOCALE        VARCHAR2(50)   NOT NULL,
+ *  AUD_HEADERS       JSON   NOT NULL,
+ *  AUD_EXTRA_INFO    JSON   NOT NULL
  * )
  * </pre>
  *
@@ -60,8 +61,9 @@ import java.util.stream.Collectors;
  * @since 1.0
  */
 @Slf4j
+@Setter
 @RequiredArgsConstructor
-public class JdbcAuditTrailManager extends NamedParameterJdbcDaoSupport implements AuditTrailManager, DisposableBean {
+public class JdbcAuditTrailManager extends AbstractAuditTrailManager {
 
     /**
      * Auditable columns in the database table.
@@ -104,15 +106,31 @@ public class JdbcAuditTrailManager extends NamedParameterJdbcDaoSupport implemen
         /**
          * UserAgent column.
          */
-        USERAGENT("AUD_USERAGENT");
+        USERAGENT("AUD_USERAGENT"),
+        /**
+         * Locale column.
+         */
+        LOCALE("AUD_LOCALE"),
+        /**
+         * Headers column.
+         */
+        HEADERS("AUD_HEADERS"),
+        /**
+         * Extra info column.
+         */
+        EXTRA_INFO("AUD_EXTRA_INFO");
 
         private final String columnName;
     }
 
     private static final String INSERT_SQL_TEMPLATE = "INSERT INTO %s ("
+        + Arrays.stream(AuditTableColumns.values()).map(AuditTableColumns::getColumnName).collect(Collectors.joining(","))
+        + ") VALUES ("
         + Arrays.stream(AuditTableColumns.values())
         .map(AuditTableColumns::getColumnName)
-        .collect(Collectors.joining(",")) + ") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)";
+        .map(name -> StringUtils.prependIfMissing(name, ":"))
+        .collect(Collectors.joining(","))
+        + ')';
 
     private static final String DELETE_SQL_TEMPLATE = "DELETE FROM %s %s";
 
@@ -122,86 +140,80 @@ public class JdbcAuditTrailManager extends NamedParameterJdbcDaoSupport implemen
      * Instance of TransactionTemplate to manually execute a transaction since
      * threads are not in the same transaction.
      */
-    @NotNull
-    private final TransactionOperations transactionTemplate;
+    private final @NotNull TransactionOperations transactionTemplate;
+    private final @NotNull JdbcTemplate jdbcTemplate;
+    private final @NotNull JpaEntityFactory<AuditTrailEntity> jpaAuditTrailEntityFactory;
 
-    @NotNull
-    @Size(min = 1)
-    @Setter
-    private String tableName = "COM_AUDIT_TRAIL";
+    private @NotNull @Size(min = 1) String tableName = "COM_AUDIT_TRAIL";
 
-    @Setter
     private int columnLength = DEFAULT_COLUMN_LENGTH;
 
-    @Setter
     private String selectByDateSqlTemplate = "SELECT * FROM %s WHERE %s ORDER BY " + AuditTableColumns.DATE.getColumnName() + " DESC";
 
-    @Setter
     private String dateFormatterPattern = "yyyy-MM-dd 00:00:00.000000";
 
-    @Setter
     private String dateFormatterFunction;
 
-    @NotNull
-    private ExecutorService executorService = Executors.newSingleThreadExecutor();
-
-    private boolean defaultExecutorService = true;
-
-    @Setter
-    private boolean asynchronous = true;
-
-    /**
-     * Criteria used to determine records that should be deleted on cleanup.
-     */
-    @Setter
     private WhereClauseMatchCriteria cleanupCriteria = new NoMatchWhereClauseMatchCriteria();
 
-    @Setter
     private List<String> headerNames = new ArrayList<>();
 
-
     @Override
-    public void record(final AuditActionContext auditActionContext) {
-        val command = new LoggingTask(auditActionContext,
-            this.transactionTemplate, this.columnLength);
-        if (this.asynchronous) {
-            this.executorService.execute(command);
-        } else {
-            command.run();
-        }
-    }
+    protected void saveAuditRecord(final AuditActionContext auditActionContext) {
+        transactionTemplate.execute(new TransactionCallbackWithoutResult() {
+            @Override
+            protected void doInTransactionWithoutResult(final TransactionStatus __) {
+                val principal = auditActionContext.getPrincipal();
+                val userId = columnLength <= 0 || principal.length() <= columnLength
+                    ? principal
+                    : principal.substring(0, columnLength);
+                val resourceOperatedUpon = auditActionContext.getResourceOperatedUpon();
+                val resource = columnLength <= 0 || resourceOperatedUpon.length() <= columnLength
+                    ? resourceOperatedUpon
+                    : resourceOperatedUpon.substring(0, columnLength);
+                val actionPerformed = auditActionContext.getActionPerformed();
+                val action = columnLength <= 0 || actionPerformed.length() <= columnLength
+                    ? actionPerformed
+                    : actionPerformed.substring(0, columnLength);
 
-    /**
-     * Sets executor service.
-     *
-     * @param executorService the executor service
-     */
-    public void setExecutorService(final ExecutorService executorService) {
-        this.executorService = executorService;
-        this.defaultExecutorService = false;
-    }
+                val sql = String.format(INSERT_SQL_TEMPLATE, tableName);
+                val clientInfo = auditActionContext.getClientInfo();
+                val locale = Optional.ofNullable(clientInfo.getLocale())
+                    .map(Locale::toLanguageTag)
+                    .orElseGet(Locale.US::toLanguageTag);
 
-    /**
-     * We only shut down the default executor service.  We assume, that if you've injected one, its being managed elsewhere.
-     */
-    @Override
-    public void destroy() {
-        if (this.defaultExecutorService) {
-            this.executorService.shutdown();
-        }
+                val parameterMap = new HashMap<String, Object>();
+                parameterMap.put(AuditTableColumns.USER.getColumnName(), userId);
+                parameterMap.put(AuditTableColumns.CLIENT_IP.getColumnName(), clientInfo.getClientIpAddress());
+                parameterMap.put(AuditTableColumns.SERVER_IP.getColumnName(), clientInfo.getServerIpAddress());
+                parameterMap.put(AuditTableColumns.RESOURCE.getColumnName(), resource);
+                parameterMap.put(AuditTableColumns.APPLIC_CD.getColumnName(), auditActionContext.getApplicationCode());
+                parameterMap.put(AuditTableColumns.DATE.getColumnName(), auditActionContext.getWhenActionWasPerformed());
+                parameterMap.put(AuditTableColumns.GEOLOCATION.getColumnName(), clientInfo.getGeoLocation());
+                parameterMap.put(AuditTableColumns.USERAGENT.getColumnName(), clientInfo.getUserAgent());
+                parameterMap.put(AuditTableColumns.LOCALE.getColumnName(), locale);
+                parameterMap.put(AuditTableColumns.ACTION.getColumnName(), action);
+
+                val converter = new MapToJsonAttributeConverter();
+                parameterMap.put(AuditTableColumns.HEADERS.getColumnName(), converter.convertToDatabaseColumn(clientInfo.getHeaders()));
+                parameterMap.put(AuditTableColumns.EXTRA_INFO.getColumnName(), converter.convertToDatabaseColumn(clientInfo.getExtraInfo()));
+
+                val namedTemplate = new NamedParameterJdbcTemplate(jdbcTemplate);
+                namedTemplate.update(sql, parameterMap);
+            }
+        });
     }
 
     @Override
     public void clean() {
-        this.transactionTemplate.execute(new TransactionCallbackWithoutResult() {
-
+        transactionTemplate.execute(new TransactionCallbackWithoutResult() {
             @Override
-            protected void doInTransactionWithoutResult(final TransactionStatus transactionStatus) {
+            protected void doInTransactionWithoutResult(final TransactionStatus __) {
                 val sql = String.format(DELETE_SQL_TEMPLATE, tableName, cleanupCriteria);
                 val params = cleanupCriteria.getParameterValues();
                 LOGGER.info("Cleaning audit records with query [{}]", sql);
                 LOGGER.debug("Query parameters: " + params);
-                val count = getJdbcTemplate().update(sql, params.toArray());
+                val count = jdbcTemplate.update(sql, params.toArray());
                 LOGGER.info("[{}] records deleted.", count);
             }
         });
@@ -209,91 +221,63 @@ public class JdbcAuditTrailManager extends NamedParameterJdbcDaoSupport implemen
 
     @Override
     public void removeAll() {
-        this.transactionTemplate.execute(new TransactionCallbackWithoutResult() {
-
+        transactionTemplate.execute(new TransactionCallbackWithoutResult() {
             @Override
-            protected void doInTransactionWithoutResult(final TransactionStatus transactionStatus) {
-                val sql = String.format(DELETE_SQL_TEMPLATE, tableName, org.apache.commons.lang3.StringUtils.EMPTY);
-                val count = getJdbcTemplate().update(sql);
+            protected void doInTransactionWithoutResult(final TransactionStatus __) {
+                val sql = String.format(DELETE_SQL_TEMPLATE, tableName, "aud");
+                val count = jdbcTemplate.update(sql);
                 LOGGER.info("[{}] records deleted.", count);
             }
         });
     }
 
     @Override
-    public Set<? extends AuditActionContext> getAuditRecords(final Map<WhereClauseFields, Object> whereClause) {
-
-        var builder = new StringBuilder("1=1 ");
+    public List<? extends AuditActionContext> getAuditRecords(final Map<WhereClauseFields, Object> whereClause) {
+        val builder = new StringBuilder("1=1 ");
+        val args = new ArrayList<>();
         if (whereClause.containsKey(WhereClauseFields.DATE)) {
-            val formatter = DateTimeFormatter.ofPattern(this.dateFormatterPattern, Locale.ENGLISH);
-            var sinceDate = (LocalDate) whereClause.get(WhereClauseFields.DATE);
-            var formattedDate = sinceDate.format(formatter);
-            if (this.dateFormatterFunction != null) {
-                var patternToUse = StringUtils.hasLength(this.dateFormatterPattern)
-                    ? this.dateFormatterPattern
-                    : "yyyy-MM-dd";
-                formattedDate = String.format(this.dateFormatterFunction, sinceDate.format(formatter), patternToUse);
-                builder.append(String.format("AND AUD_DATE>=%s ", formattedDate));
+            builder.append("AND AUD_DATE>=? ");
+            var sinceDate = (TemporalAccessor) whereClause.get(WhereClauseFields.DATE);
+            if (dateFormatterFunction != null) {
+                val formatter = DateTimeFormatter.ofPattern(dateFormatterPattern, Locale.ENGLISH);
+                val patternToUse = StringUtils.isNotBlank(dateFormatterPattern) ? dateFormatterPattern : "yyyy-MM-dd";
+                val formattedDate = String.format(dateFormatterFunction, formatter.format(sinceDate), patternToUse);
+                LOGGER.trace("Using date formatter [{}] to format date [{}] to [{}]", dateFormatterFunction, sinceDate, formattedDate);
+                args.add(formattedDate);
             } else {
-                builder.append(String.format("AND AUD_DATE>='%s' ", formattedDate));
+                args.add(sinceDate);
             }
         }
         if (whereClause.containsKey(WhereClauseFields.PRINCIPAL)) {
             var principal = whereClause.get(WhereClauseFields.PRINCIPAL).toString();
-            builder.append(String.format("AND AUD_USER='%s' ", principal));
+            args.add(principal);
+            builder.append("AND AUD_USER=? ");
         }
-        return getAuditRecordsSince(builder);
+        val count = whereClause.containsKey(WhereClauseFields.COUNT)
+            ? (long) whereClause.get(WhereClauseFields.COUNT)
+            : DEFAULT_MAX_AUDIT_RECORDS_TO_FETCH;
+
+        return getAuditRecordsSince(builder, args.toArray(), count);
     }
 
-    @RequiredArgsConstructor
-    private final class LoggingTask implements Runnable {
-
-        private final AuditActionContext auditActionContext;
-
-        private final TransactionOperations transactionTemplate;
-
-        private final int columnLength;
-
-        @Override
-        public void run() {
-            this.transactionTemplate
-                .execute(new TransactionCallbackWithoutResult() {
-                    @Override
-                    protected void doInTransactionWithoutResult(final TransactionStatus transactionStatus) {
-                        val userId = columnLength <= 0 || auditActionContext.getPrincipal().length() <= columnLength
-                            ? auditActionContext.getPrincipal()
-                            : auditActionContext.getPrincipal().substring(0, columnLength);
-                        val resource = columnLength <= 0 || auditActionContext.getResourceOperatedUpon().length() <= columnLength
-                            ? auditActionContext.getResourceOperatedUpon()
-                            : auditActionContext.getResourceOperatedUpon().substring(0, columnLength);
-                        val action = columnLength <= 0 || auditActionContext.getActionPerformed().length() <= columnLength
-                            ? auditActionContext.getActionPerformed()
-                            : auditActionContext.getActionPerformed().substring(0, columnLength);
-
-                        getJdbcTemplate()
-                            .update(
-                                String.format(INSERT_SQL_TEMPLATE, tableName),
-                                userId,
-                                auditActionContext.getClientInfo().getClientIpAddress(),
-                                auditActionContext.getClientInfo().getServerIpAddress(),
-                                resource,
-                                action,
-                                auditActionContext.getApplicationCode(),
-                                auditActionContext.getWhenActionWasPerformed(),
-                                auditActionContext.getClientInfo().getGeoLocation(),
-                                auditActionContext.getClientInfo().getUserAgent());
-                    }
-                });
-        }
-    }
-
-    private Set<? extends AuditActionContext> getAuditRecordsSince(final StringBuilder where) {
-        return transactionTemplate.execute((TransactionCallback<Set>) transactionStatus -> {
-            val sql = String.format(this.selectByDateSqlTemplate, tableName, where);
-            Set<AuditActionContext> results = new LinkedHashSet<>();
-            getJdbcTemplate().query(sql, resultSet -> {
+    private List<? extends AuditActionContext> getAuditRecordsSince(final StringBuilder where, final Object[] args,
+                                                                    final long count) {
+        return transactionTemplate.execute((TransactionCallback<List>) transactionStatus -> {
+            var sql = String.format(selectByDateSqlTemplate, tableName, where);
+            if (count > 0) {
+                if (jpaAuditTrailEntityFactory.isOracle()) {
+                    sql += " FETCH FIRST %s ROWS ONLY".formatted(count);
+                } else if (jpaAuditTrailEntityFactory.isMsSqlServer()) {
+                    sql = StringUtils.replace(sql, "SELECT ", "SELECT TOP %s ".formatted(count));
+                } else {
+                    sql += " LIMIT %s".formatted(count);
+                }
+            }
+            val results = new ArrayList<>();
+            LOGGER.debug("Executing SQL query [{}]", sql);
+            jdbcTemplate.query(sql, resultSet -> {
                 results.add(getAuditActionContext(resultSet));
-            });
+            }, args);
             return results;
         });
     }
@@ -303,21 +287,24 @@ public class JdbcAuditTrailManager extends NamedParameterJdbcDaoSupport implemen
         val resource = resultSet.getString(AuditTableColumns.RESOURCE.getColumnName());
         val clientIp = resultSet.getString(AuditTableColumns.CLIENT_IP.getColumnName());
         val serverIp = resultSet.getString(AuditTableColumns.SERVER_IP.getColumnName());
-        val audDate = resultSet.getDate(AuditTableColumns.DATE.getColumnName());
+        val audDate = resultSet.getTimestamp(AuditTableColumns.DATE.getColumnName());
         val appCode = resultSet.getString(AuditTableColumns.APPLIC_CD.getColumnName());
         val action = resultSet.getString(AuditTableColumns.ACTION.getColumnName());
         val userAgent = resultSet.getString(AuditTableColumns.USERAGENT.getColumnName());
         val geoLocation = resultSet.getString(AuditTableColumns.GEOLOCATION.getColumnName());
+        val locale = StringUtils.defaultIfBlank(resultSet.getString(AuditTableColumns.LOCALE.getColumnName()), Locale.US.toLanguageTag());
 
         val headers = new HashMap<String, String>();
         for (val headerName : headerNames) {
             val headerValue = resultSet.getString(headerName);
-            if (StringUtils.hasText(headerValue)) {
+            if (StringUtils.isNotBlank(headerValue)) {
                 headers.put(headerName, headerValue);
             }
         }
-        val clientInfo = new ClientInfo(clientIp, serverIp, userAgent, geoLocation).setHeaders(headers);
-        val auditDate = LocalDateTime.ofInstant(Instant.ofEpochMilli(audDate.getTime()), ZoneOffset.UTC);
+        val clientInfo = new ClientInfo(clientIp, serverIp, userAgent, geoLocation)
+            .setLocale(Locale.forLanguageTag(locale))
+            .setHeaders(headers);
+        val auditDate = audDate.toLocalDateTime();
         return new AuditActionContext(principal, resource, action, appCode, auditDate, clientInfo);
     }
 }
