@@ -2,24 +2,23 @@ package org.apereo.cas.authentication.rest;
 
 import org.apereo.cas.authentication.SurrogateAuthenticationException;
 import org.apereo.cas.authentication.surrogate.SimpleSurrogateAuthenticationService;
+import org.apereo.cas.authentication.surrogate.SurrogateAuthenticationService;
 import org.apereo.cas.authentication.surrogate.SurrogateCredentialTrait;
 import org.apereo.cas.configuration.CasConfigurationProperties;
 import org.apereo.cas.services.ServicesManager;
-
+import org.apereo.cas.test.CasTestExtension;
 import lombok.val;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.util.LinkedMultiValueMap;
-
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -30,6 +29,7 @@ import static org.mockito.Mockito.*;
  * @since 6.2.0
  */
 @SpringBootTest(classes = RefreshAutoConfiguration.class)
+@ExtendWith(CasTestExtension.class)
 @EnableConfigurationProperties(CasConfigurationProperties.class)
 @Tag("Impersonation")
 class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
@@ -45,7 +45,7 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
         requestBody.add("username", "test");
         requestBody.add("password", "password");
 
-        val service = new SimpleSurrogateAuthenticationService(Map.of("test", List.of("other-user")), mock(ServicesManager.class));
+        val service = getSurrogateAuthenticationService(Map.of("test", List.of("other-user")));
         val factory = new SurrogateAuthenticationRestHttpRequestCredentialFactory(service, casProperties.getAuthn().getSurrogate());
         assertThrows(SurrogateAuthenticationException.class, () -> factory.fromRequest(request, requestBody));
     }
@@ -58,7 +58,7 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
         requestBody.add("username", "test");
         requestBody.add("password", "password");
 
-        val service = new SimpleSurrogateAuthenticationService(Map.of("test", List.of("surrogate")), mock(ServicesManager.class));
+        val service = getSurrogateAuthenticationService(Map.of("test", List.of("surrogate")));
         val factory = new SurrogateAuthenticationRestHttpRequestCredentialFactory(service, casProperties.getAuthn().getSurrogate());
         assertTrue(factory.getOrder() > 0);
         val results = factory.fromRequest(request, requestBody);
@@ -73,7 +73,7 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
     void verifyEmptyCreds() throws Throwable {
         val request = new MockHttpServletRequest();
         val requestBody = new LinkedMultiValueMap<String, String>();
-        val service = new SimpleSurrogateAuthenticationService(Map.of("test", List.of("surrogate")), mock(ServicesManager.class));
+        val service = getSurrogateAuthenticationService(Map.of("test", List.of("surrogate")));
         val factory = new SurrogateAuthenticationRestHttpRequestCredentialFactory(service, casProperties.getAuthn().getSurrogate());
         assertTrue(factory.fromRequest(request, requestBody).isEmpty());
     }
@@ -85,7 +85,7 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
         requestBody.add("username", "surrogate+test");
         requestBody.add("password", "password");
 
-        val service = new SimpleSurrogateAuthenticationService(Map.of("test", List.of("surrogate")), mock(ServicesManager.class));
+        val service = getSurrogateAuthenticationService(Map.of("test", List.of("surrogate")));
         val factory = new SurrogateAuthenticationRestHttpRequestCredentialFactory(service, casProperties.getAuthn().getSurrogate());
         val results = factory.fromRequest(request, requestBody);
         assertFalse(results.isEmpty());
@@ -102,7 +102,7 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
         requestBody.add("username", "test");
         requestBody.add("password", "password");
 
-        val service = new SimpleSurrogateAuthenticationService(Collections.emptyMap(), mock(ServicesManager.class));
+        val service = getSurrogateAuthenticationService(Map.of());
         val factory = new SurrogateAuthenticationRestHttpRequestCredentialFactory(service, casProperties.getAuthn().getSurrogate());
         val results = factory.fromRequest(request, requestBody);
         assertFalse(results.isEmpty());
@@ -111,4 +111,9 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
         assertTrue(credential.getCredentialMetadata().getTrait(SurrogateCredentialTrait.class).isEmpty());
         assertEquals("test", credential.getId());
     }
+
+    private SurrogateAuthenticationService getSurrogateAuthenticationService(final Map accounts) {
+        return new SimpleSurrogateAuthenticationService(accounts, mock(ServicesManager.class), casProperties);
+    }
+
 }
